[package]
name = "cow-sdk-transport-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Browser fetch-based HTTP transport for the CoW Protocol Rust SDK"
documentation = "https://docs.rs/cow-sdk-transport-wasm"
homepage = "https://github.com/cowdao-grants/cow-rs"
keywords = ["cow-protocol", "sdk", "transport", "wasm", "fetch"]
categories = ["api-bindings", "cryptography::cryptocurrencies", "wasm"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
targets = ["wasm32-unknown-unknown"]

[lints]
workspace = true

[features]
default = []
tracing = ["dep:tracing"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-trait.workspace = true
cow-sdk-core = { path = "../core", version = "0.1.0" }
js-sys.workspace = true
serde.workspace = true
tracing = { workspace = true, optional = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
  "AbortController",
  "AbortSignal",
  "Headers",
  "Request",
  "RequestInit",
  "Response",
  "Window",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
cow-sdk-core = { path = "../core", version = "0.1.0", features = ["tracing"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
wiremock = "0.6.5"
