[package]
name = "cow-sdk-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "TypeScript-callable wasm-bindgen leaf for the CoW Protocol Rust SDK"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-wasm"
homepage = "https://github.com/cowdao-grants/cow-rs"
keywords = ["cow-protocol", "sdk", "wasm", "typescript", "wasm-bindgen"]
categories = ["api-bindings", "cryptography::cryptocurrencies", "wasm"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
targets = ["wasm32-unknown-unknown"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = ["flavor-default"]
orderbook = ["dep:cow-sdk-orderbook", "transport-policy"]
signing = ["dep:cow-sdk-contracts", "dep:cow-sdk-signing"]
app-data = ["dep:cow-sdk-app-data"]
ipfs = ["app-data", "transport-policy"]
cancellation = ["signing"]
transport-policy = ["dep:cow-sdk-transport-policy"]
trading = ["orderbook", "signing", "app-data", "dep:cow-sdk-trading"]
subgraph = ["dep:cow-sdk-subgraph", "transport-policy"]
flavor-default = [
    "orderbook",
    "signing",
    "app-data",
    "ipfs",
    "cancellation",
    "transport-policy",
    "trading",
    "subgraph",
]
flavor-orderbook = [
    "orderbook",
    "signing",
    "cancellation",
    "transport-policy",
]
flavor-signing = ["signing"]
flavor-full = ["flavor-default"]
flavor-cloudflare = [
    "orderbook",
    "signing",
    "app-data",
    "cancellation",
    "transport-policy",
    "trading",
]
tracing = ["dep:tracing"]

[dependencies]
alloy-primitives.workspace = true
async-trait.workspace = true
cow-sdk-app-data = { path = "../app-data", version = "0.1.0", optional = true }
cow-sdk-contracts = { path = "../contracts", version = "0.1.0", optional = true }
cow-sdk-core = { path = "../core", version = "0.1.0" }
cow-sdk-pure-helpers = { path = "../pure-helpers", version = "0.1.0" }
cow-sdk-signing = { path = "../signing", version = "0.1.0", optional = true }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

# tsify is target-gated under wasm32 because the js feature pulls wasm-bindgen and serde-wasm-bindgen which would contradict the native facade invariant if placed in target-agnostic dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
cow-sdk-orderbook = { path = "../orderbook", version = "0.1.0", optional = true }
cow-sdk-subgraph = { path = "../subgraph", version = "0.1.0", optional = true }
cow-sdk-trading = { path = "../trading", version = "0.1.0", optional = true }
cow-sdk-transport-policy = { path = "../transport-policy", version = "0.1.0", optional = true }
getrandom = { workspace = true }
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
tsify.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["AbortController", "AbortSignal", "EventTarget", "Headers", "Response", "console"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
