[package]
name = "cow-sdk-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# JavaScript-only leaf: built to wasm32 and shipped to npm (see crates/wasm/npm),
# never published to crates.io. Its `exports` are a wasm-bindgen JS ABI with no
# crates.io consumer, and its host-safe `helpers` only forward to the published
# cow-sdk-signing / cow-sdk-core / cow-sdk-app-data / cow-sdk-contracts crates.
publish = false

description = "TypeScript-callable wasm-bindgen leaf for the CoW Protocol Rust SDK; built to wasm32 and shipped to npm, not crates.io"
readme = "README.md"
homepage = "https://github.com/0xSymbiome/cow-rs"
keywords = ["cow-protocol", "sdk", "wasm", "typescript", "wasm-bindgen"]
categories = ["api-bindings", "cryptography::cryptocurrencies", "wasm"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
targets = ["wasm32-unknown-unknown"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

# Shipped to npm, never to crates.io: excluded from cargo-release so it is not
# version-bumped, README-replaced, or published during a release run.
[package.metadata.release]
release = false

[lints]
workspace = true

[features]
default = ["flavor-default"]
orderbook = ["dep:cow-sdk-orderbook", "transport-policy"]
# `cow-sdk-contracts`, `cow-sdk-signing`, and `cow-sdk-app-data` are unconditional
# dependencies of the `helpers` module, so these features are pure cfg toggles
# that gate the matching wasm-bindgen `exports` submodules.
signing = []
app-data = []
ipfs = ["app-data", "transport-policy"]
cancellation = ["signing"]
transport-policy = ["cow-sdk-core/transport-policy"]
trading = ["orderbook", "signing", "app-data", "dep:cow-sdk-trading"]
subgraph = ["dep:cow-sdk-subgraph", "transport-policy"]
flavor-default = [
    "orderbook",
    "signing",
    "app-data",
    "ipfs",
    "cancellation",
    "transport-policy",
    "trading",
    "subgraph",
]
tracing = ["dep:tracing", "cow-sdk-core/tracing"]

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
async-trait.workspace = true
cow-sdk-app-data = { path = "../app-data", version = "0.1.0-alpha.7" }
cow-sdk-contracts = { path = "../contracts", version = "0.1.0-alpha.7" }
cow-sdk-core = { path = "../core", version = "0.1.0-alpha.7" }
cow-sdk-signing = { path = "../signing", version = "0.1.0-alpha.7" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

# tsify is target-gated under wasm32 because the js feature pulls wasm-bindgen and serde-wasm-bindgen which would contradict the native facade invariant if placed in target-agnostic dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
cow-sdk-orderbook = { path = "../orderbook", version = "0.1.0-alpha.7", optional = true }
cow-sdk-subgraph = { path = "../subgraph", version = "0.1.0-alpha.7", optional = true }
cow-sdk-trading = { path = "../trading", version = "0.1.0-alpha.7", optional = true }
getrandom = { workspace = true }
gloo-timers = { workspace = true }
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
tsify.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["AbortController", "AbortSignal", "EventTarget", "console"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
cow-sdk-test-utils = { path = "../test-utils" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Drives the native `ReqwestTransport` half of the cross-adapter transport
# parity and tracing-span contract tests; the wasm `FetchTransport` half of the
# same files runs under `wasm-pack test`.
cow-sdk-test-utils = { path = "../test-utils" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
wiremock.workspace = true
