[workspace]
members = []
resolver = "2"

[workspace.dependencies]
alloy-primitives = { version = "1.5", default-features = false }

[package]
name = "cow-sdk-examples-native"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
publish = false
description = "Native consumer-facing capability scenarios for cow-rs"

[features]
default = []
alloy-provider = ["cow-sdk/alloy-provider"]
alloy-signer = ["cow-sdk/alloy-signer"]
alloy = ["cow-sdk/alloy"]
live-services = ["alloy"]

[dependencies]
alloy-primitives = { workspace = true }
async-trait = "0.1.89"
cow-sdk = { path = "../../crates/sdk" }
cow-sdk-subgraph = { path = "../../crates/subgraph" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6.5"

[[example]]
name = "sdk_surface_report"
path = "scenarios/sdk_surface_report.rs"

[[example]]
name = "app_data_roundtrip"
path = "scenarios/app_data_roundtrip.rs"

[[example]]
name = "signing_roundtrip"
path = "scenarios/signing_roundtrip.rs"

[[example]]
name = "quote_only_simulation"
path = "scenarios/quote_only_simulation.rs"

[[example]]
name = "cancellation_combinator"
path = "scenarios/cancellation_combinator.rs"

[[example]]
name = "limit_order_simulation"
path = "scenarios/limit_order_simulation.rs"

[[example]]
name = "order_lifecycle_simulation"
path = "scenarios/order_lifecycle_simulation.rs"

[[example]]
name = "orderbook_transport_roundtrip"
path = "scenarios/orderbook_transport_roundtrip.rs"

[[example]]
name = "orderbook_live_probe"
path = "scenarios/orderbook_live_probe.rs"

[[example]]
name = "trading_sdk_simulation"
path = "scenarios/trading_sdk_simulation.rs"

[[example]]
name = "ethflow_transaction_simulation"
path = "scenarios/ethflow_transaction_simulation.rs"

[[example]]
name = "onchain_order_actions_simulation"
path = "scenarios/onchain_order_actions_simulation.rs"

[[example]]
name = "subgraph_query_roundtrip"
path = "scenarios/subgraph_query_roundtrip.rs"

[[example]]
name = "subgraph_custom_query_roundtrip"
path = "scenarios/subgraph_custom_query_roundtrip.rs"

[[example]]
name = "subgraph_live_query"
path = "scenarios/subgraph_live_query.rs"

[[example]]
name = "alloy_quickstart"
path = "scenarios/alloy_quickstart.rs"
required-features = ["alloy"]

[[example]]
name = "alloy_provider_only"
path = "scenarios/alloy_provider_only.rs"
required-features = ["alloy-provider"]

[[example]]
name = "alloy_signer_only"
path = "scenarios/alloy_signer_only.rs"
required-features = ["alloy-signer"]

[[example]]
name = "alloy_provider_with_custom_signer"
path = "scenarios/alloy_provider_with_custom_signer.rs"
required-features = ["alloy-provider"]

[[example]]
name = "alloy_signer_with_custom_provider"
path = "scenarios/alloy_signer_with_custom_provider.rs"
required-features = ["alloy-signer"]

[[example]]
name = "alloy_trading_full_flow"
path = "scenarios/alloy_trading_full_flow.rs"
required-features = ["alloy"]

[[example]]
name = "transaction_lifecycle"
path = "scenarios/transaction_lifecycle.rs"
required-features = ["alloy"]

[[example]]
name = "live_order_sepolia"
path = "scenarios/live_order_sepolia.rs"
required-features = ["live-services"]

[[example]]
name = "simplest_swap_quickstart"
path = "scenarios/simplest_swap_quickstart.rs"

[[example]]
name = "error_classification_simulation"
path = "scenarios/error_classification_simulation.rs"

[[example]]
name = "order_list_history_simulation"
path = "scenarios/order_list_history_simulation.rs"
