[workspace]
members = []
resolver = "2"

[package]
name = "cow-sdk-examples-native"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
publish = false
description = "Native consumer-facing capability scenarios for cow-rs"

[features]
default = []
alloy-provider = ["cow-sdk/alloy-provider"]
alloy-signer = ["cow-sdk/alloy-signer"]
alloy = ["cow-sdk/alloy"]

[dependencies]
async-trait = "0.1.89"
cow-sdk = { path = "../../crates/sdk", features = ["testing", "subgraph"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6.5"

[[example]]
name = "facade_surface"
path = "scenarios/facade_surface.rs"

[[example]]
name = "app_data"
path = "scenarios/app_data.rs"

[[example]]
name = "sign_order"
path = "scenarios/sign_order.rs"

[[example]]
name = "quote"
path = "scenarios/quote.rs"

[[example]]
name = "cancel_in_flight"
path = "scenarios/cancel_in_flight.rs"

[[example]]
name = "limit_order"
path = "scenarios/limit_order.rs"

[[example]]
name = "order_lifecycle"
path = "scenarios/order_lifecycle.rs"

[[example]]
name = "orderbook_transport"
path = "scenarios/orderbook_transport.rs"

[[example]]
name = "orderbook_live"
path = "scenarios/orderbook_live.rs"

[[example]]
name = "trading_full_cycle"
path = "scenarios/trading_full_cycle.rs"

[[example]]
name = "ethflow"
path = "scenarios/ethflow.rs"

[[example]]
name = "onchain_actions"
path = "scenarios/onchain_actions.rs"

[[example]]
name = "subgraph_query"
path = "scenarios/subgraph_query.rs"

[[example]]
name = "subgraph_live"
path = "scenarios/subgraph_live.rs"

[[example]]
name = "alloy_quickstart"
path = "scenarios/alloy_quickstart.rs"
required-features = ["alloy"]

[[example]]
name = "alloy_provider"
path = "scenarios/alloy_provider.rs"
required-features = ["alloy-provider"]

[[example]]
name = "alloy_signer"
path = "scenarios/alloy_signer.rs"
required-features = ["alloy-signer"]

[[example]]
name = "alloy_custom_traits"
path = "scenarios/alloy_custom_traits.rs"
required-features = ["alloy"]

[[example]]
name = "alloy_trading_full_flow"
path = "scenarios/alloy_trading_full_flow.rs"
required-features = ["alloy"]

[[example]]
name = "transaction_lifecycle"
path = "scenarios/transaction_lifecycle.rs"
required-features = ["alloy"]

[[example]]
name = "swap_quickstart"
path = "scenarios/swap_quickstart.rs"

[[example]]
name = "error_classification"
path = "scenarios/error_classification.rs"

[[example]]
name = "order_history"
path = "scenarios/order_history.rs"

[[example]]
name = "receipt_lifecycle"
path = "scenarios/receipt_lifecycle.rs"

[[example]]
name = "slippage_suggester"
path = "scenarios/slippage_suggester.rs"

[[example]]
name = "eip1271_signer"
path = "scenarios/eip1271_signer.rs"

[[example]]
name = "ethflow_checker"
path = "scenarios/ethflow_checker.rs"
