[package]
name = "cow-sdk-app-data"
version = "0.0.1-reserved.0"
edition = "2024"
rust-version = "1.94.0"
license = "GPL-3.0-only"
description = "Reserved placeholder for cow-sdk-app-data, the IPFS-ready JSON schema handling and app-data metadata of the CoW Protocol Rust SDK."
repository = "https://github.com/0xSymbiome/cow-rs"
homepage = "https://github.com/0xSymbiome/cow-rs"
documentation = "https://docs.rs/cow-sdk-app-data"
readme = "README.md"
keywords = ["cow-protocol", "app-data", "ipfs", "defi"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
